fixing display page on mobile

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -13,6 +13,7 @@ html {
   box-sizing: border-box;
   font-size: 62.5%;
   scroll-behavior: smooth;
+  height: -webkit-fill-available;
 }
 
 body {
@@ -22,8 +23,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   line-height: 1.75;
-}
 
-#root {
-  height: fit-content;
+  height: 100vh;
+  height: -webkit-fill-available;
+  // @media only screen and (max-width: $bp-small) {
+  // }
 }
